src/test/ui/issues/issue-17431-5.stderr
error[E0072]: recursive type `Bar` has infinite size
  --> $DIR/issue-17431-5.rs:5:1
   |
LL | struct Bar<T> { x: Bar<Foo> , marker: marker::PhantomData<T> }
   | ^^^^^^^^^^^^^      -------- recursive without indirection
   | |
   | recursive type has infinite size
   |
help: insert some indirection to make `Bar` representable
   |
LL | struct Bar<T> { x: Box<Bar<Foo>> , marker: marker::PhantomData<T> }
   |                    ^^^^        ^
LL | struct Bar<T> { x: Rc<Bar<Foo>> , marker: marker::PhantomData<T> }
   |                    ^^^        ^
LL | struct Bar<T> { x: &Bar<Foo> , marker: marker::PhantomData<T> }
   |                    ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
